Fix minor z-index issue

--- a/static/styles/less/components.less
+++ b/static/styles/less/components.less
@@ -8,6 +8,9 @@
 		> thead {
 			.pos-t(0; sticky; 1);
 		}
+		table {
+			.pos(relative; 0);
+		}
 	}
 }
 
